<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_12sdp"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_nim"
            android:ems="10"
            android:inputType="number"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ed_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_nama"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ed_jurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_jurusan"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_12sdp">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textSize="@dimen/_12ssp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_5sdp"
                style="?android:attr/button"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_simpan"
                android:textSize="@dimen/_12ssp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_weight="1"
                style="?android:attr/button"/>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_logout"
                android:textSize="@dimen/_12ssp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                style="?android:attr/button"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_showdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_lihat_data"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            style="?android:attr/button"/>

    </LinearLayout>

</RelativeLayout>